RESOLVED FIXED69727
REGRESSION (WebKit2): Checkboxes and radio buttons are drawn 1 pixel too high, not repainted properly
https://bugs.webkit.org/show_bug.cgi?id=69727
Summary REGRESSION (WebKit2): Checkboxes and radio buttons are drawn 1 pixel too high...
mitz
Reported 2011-10-09 12:34:50 PDT
<rdar://problem/9484496> Patch forthcoming.
Attachments
Make WebCoreFlippedView an NSControl (1.31 KB, patch)
2011-10-09 12:38 PDT, mitz
andersca: review+
mitz
Comment 1 2011-10-09 12:38:49 PDT
Created attachment 110307 [details] Make WebCoreFlippedView an NSControl
mitz
Comment 2 2011-10-09 13:19:51 PDT
Note You need to log in before you can comment on or make changes to this bug.