<rdar://problem/9484496> REGRESSION (WebKit2): Checkboxes and radio buttons are drawn 1 pixel too high, not repainted properly https://bugs.webkit.org/show_bug.cgi?id=69727

Reviewed by Anders Carlsson.

* platform/mac/ThemeMac.mm: Made WebCoreFlippedView an NSControl subclass so that the NSButtonCell
used to draw checkboxes and radio buttons can make it its controlView, and consequently check and
obey its flippedness.



git-svn-id: svn://svn.chromium.org/blink/trunk@97032 bbb929c8-8fbe-4397-9dbb-9b2b20218538