third_party/WebKit/Source/WebCore/platform/mac/ThemeMac.mm
@@ -38,7 +38,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 using namespace std;
 
 // This is a view whose sole purpose is to tell AppKit that it's flipped.
-@interface WebCoreFlippedView : NSView
+@interface WebCoreFlippedView : NSControl
 @end
 
 @implementation WebCoreFlippedView
